--- a/index.html
+++ b/index.html
@@ -5,17 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title> </title>
+    <title> Grids </title>
 </head>
 <body> 
-    <header class="headeritem">
-        <div class="parent">
-            <div class="forlogo">
+    <header class="parent">
+            <div class="item1">
                 <img class="logo" alt="logo" src="images/logo.png"> 
             </div>
-            <div class="fornavbar"></div>
-                <nav>
-                    <ul>
+            <div class="item2">
+                <nav class="flex liitems">
+                    <ul class="flex liitems">
                         <li class="navitems"> მთავარი </li>
                         <li class="navitems"> ჩვენ შესახებ </li>
                         <li class="navitems"> სერვისები</li>
@@ -23,7 +22,51 @@
                         <li class="navitems"> პარტნიორები </li> 
                     </ul>
                 </nav>
-        </div>
+            </div>
     </header>
+    <section class="basicsection">
+        <p> ცნობილი ფაქტია, რომ გვერდის წაკითხვად შიგთავსს შეუძლია მკითხველის ყურადღება მიიზიდოს და დიზაინის აღქმაში ხელი შეუშალოს. Lorem Ipsum-ის გამოყენებით ვღებულობთ იმაზე მეტ-ნაკლებად სწორი გადანაწილების ტექსტს, ვიდრე ერთიდაიგივე გამეორებადი სიტყვებია ხოლმე. შედეგად, ტექსტი ჩვეულებრივ ინგლისურს გავს, მისი წაითხვა კი შეუძლებელია. დღეს უამრავი პერსონალური საგამომცემლო პროგრამა და ვებგვერდი იყენებს Lorem Ipsum-ს, როგორც დროებით ტექსტს წყობის შესავსებად; Lorem Ipsum-ის მოძებნისას კი საძიებო სისტემები ბევრ დაუსრულებელ გვერდს გვიჩვენებენ. წლების მანძილზე ამ ტექსტის უამრავი ვერსია გამოჩნდა, ზოგი შემთხვევით დაშვებული შეცდომის გამო, ზოგი კი — განზრახ, ხუმრობით. </p>  
+        <p> ცნობილი ფაქტია, რომ გვერდის წაკითხვად შიგთავსს შეუძლია მკითხველის ყურადღება მიიზიდოს და დიზაინის აღქმაში ხელი შეუშალოს. Lorem Ipsum-ის გამოყენებით ვღებულობთ იმაზე მეტ-ნაკლებად სწორი გადანაწილების ტექსტს, ვიდრე ერთიდაიგივე გამეორებადი სიტყვებია ხოლმე. შედეგად, ტექსტი ჩვეულებრივ ინგლისურს გავს, მისი წაითხვა კი შეუძლებელია. დღეს უამრავი პერსონალური საგამომცემლო პროგრამა და ვებგვერდი იყენებს Lorem Ipsum-ს, როგორც დროებით ტექსტს წყობის შესავსებად; Lorem Ipsum-ის მოძებნისას კი საძიებო სისტემები ბევრ დაუსრულებელ გვერდს გვიჩვენებენ. წლების მანძილზე ამ ტექსტის უამრავი ვერსია გამოჩნდა, ზოგი შემთხვევით დაშვებული შეცდომის გამო, ზოგი კი — განზრახ, ხუმრობით.</p>
+    </section>
+    <footer class="parent1"> 
+        <div class="box1"> 
+            <div class="basictext"> 
+                <h3> კონტაქტი </h3> 
+                <p class="text"> Lorem Ipsum საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია. იგი სტანდარტად 1500-იანი წლებიდან იქცა, როდესაც უცნობმა მბეჭდავმა ამწყობ დაზგაზე წიგნის საცდელი ეგზემპლარი დაბეჭდა.</p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2977.6793670460956!2d44.735615315135966!3d41.72743718280858!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4044730590156567%3A0x9114ac34b8f45e2d!2z4YOc4YOj4YOq4YOj4YOR4YOY4YOr4YOY4YOhIOGDpeGDo-GDqeGDkCwg4YOX4YOR4YOY4YOa4YOY4YOh4YOY!5e0!3m2!1ska!2sge!4v1638639317618!5m2!1ska!2sge" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" class="map"></iframe>         
+                <div class="flex icons"> 
+                  <div class="flex contactbox"> 
+                    <img src="images/phone.png" alt="image" />
+                    <p> +995 555 444 333</p>
+                  </div>
+                  <div class="flex contactbox message "> 
+                    <img src="images/Message.png" alt="image" />
+                    <p> example@gmail.com</p> 
+                </div>
+              </div>
+          </section>
+                <section> 
+              <form action="" class="form-field inputposition">          
+                  <div class="form-field">  
+                    <input type="text" placeholder="სახელი, გვარი"> 
+                  </div> 
+                  <div class="form-field">
+                    <input type="email" placeholder="ელ.ფოსტა">
+                  </div>
+                  <div class="form-field">
+                    <input type="number" placeholder="მობილური">
+                  </div>
+                  <div class="form-field">
+                    <input type="text" placeholder="შეტყობინება">
+                  </div>
+                </div>
+               <div class="forbutton flex">
+                   <button class="button"> გაგზავნა </button>  
+                </div> 
+              </form>
+          </section>
+
+        </div>
+    </footer>
 
 </body>
