--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <img class="logo" alt="logo" src="images/logo.png"> 
             </div>
             <div class="item2">
-                <nav class="flex liitems">
+                <nav">
                     <ul class="flex liitems">
                         <li class="navitems"> მთავარი </li>
                         <li class="navitems"> ჩვენ შესახებ </li>
@@ -59,7 +59,6 @@
                   <div class="form-field">
                     <input type="text" placeholder="შეტყობინება">
                   </div>
-                </div>
                <div class="forbutton flex">
                    <button class="button"> გაგზავნა </button>  
                 </div> 
